fix: added z-index to aplhabet buttons

--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@
     gap: 10px;
     justify-content: center;
     margin-top: 24px;
+    z-index: 1;
   }
 
 
